	Added: Service providers ( Sysvinit, Upstart and Systemd )
	Changed: Perl version >= 5.14.2 is now required
	Changed: Service configuration files are now lazy-loaded
	Fixed: Any task which belongs to the custom DNS records layer must not involve HTTPD configuration change
	Fixed: Bind9 must not be restarted each time a DNS zone is updated. A simple reload is sufficient
	Fixed: Some errors are not trapped

CONFIGS
	Added: imscp_daemon, imscp_network and imscp_panel upstart jobs
	Fixed: Wrong TMPDIR path ( php5-fpm )
	Removed: INIT_SCRIPTS_DIR, SERVICE_INSTALLER, SERVICE_MNGR, IMSCP_DAEMON_SNAME, IMSCP_NETWORK_SNAME and
		IMSCP_PANEL_SNAME main configuration parameters

DAEMON
	Added: End child syslog message
	Fixed: warning: ignoring return value of ‘chdir’... ( daemon_init.c )
	Fixed: Avoid useless 'fork' and 'wait' by using execl() instead of system() ( lr_syntax.c )
	Updated: Version to 1.2.3

DATABASE
	Added: domain_dns_status field in domain_dns table ( Custom DNS record status field )
	Added: plugin_config_prev field in plugin table ( Plugin previous configuration field )

DISTRIBUTIONS
	Removed: Support for Debian Squeeze ( 6.x )
	Removed: Support for Ubuntu Lucid Lynx ( 10.04 LTS )

FRONTEND
	Added Custom DNS items in debugger interface ( admin level )
	Changed: Stores the Github payload as json file instead of PHP file ( iMSCP_Update_Version::getUpdateInfo() )
	Fixed: Do not fetch more data than needed from GitHub ( iMSCP_Update_Version::getUpdateInfo() )
	Fixed: Force reload of newest mail body footprint file ( iMSCP_Exception_Writer_Mail::onUncaughtException() )
	Fixed: Html in title attribute must not be auto-escaped by jQueryUI tooltip
	Fixed: Translate the INADDR_ANY ( 0.0.0.0 ) IP address to 'Any' ( Services status )
	Improved: Translations strings entries can now be accessed as object properties ( i18n_getJsTranslations() )
	Removed: imscp_delete_opcode_file() and imscp_clear_opcode_cache() functions

INSTALLER