@@ -76,7 +76,7 @@ sub process
 
 	my @sql;
 
-	if($self->{'domain_status'} ~~ ['toadd', 'tochange', 'toenable']) {
+	if($self->{'domain_status'} ~~ [ 'toadd', 'tochange', 'toenable' ]) {
 		$rs = $self->add();
 
 		@sql = (
@@ -121,6 +121,39 @@ sub process
 	}
 
 	$rs;
+}
+
+=item add()
+
+ Add domain
+
+ Return int 0 on success, other on failure
+
+=cut
+
+sub add
+{
+	my $self = $_[0];
+
+	if($self->{'domain_status'} eq 'tochange') {
+		# Sets the status of any subdomain that belongs to this domain to 'tochange'.
+		# This is needed, else, the DNS resource records for the subdomains are not re-added in DNS zone files.
+		# FIXME: This reflect a bad implementation in the way that entities are managed. This will be solved
+		# in version 2.0.0.
+		my $rs = iMSCP::Database->factory()->doQuery(
+			'dummy',
+			'UPDATE subdomain SET subdomain_status = ? WHERE domain_id = ? AND subdomain_status <> ?',
+			'tochange',
+			$self->{'domain_id'},
+			'todelete'
+		);
+		unless(ref $rs eq 'HASH') {
+			error($rs);
+			return 1;
+		}
+	}
+
+	$self->SUPER::add();
 }
 
 =item restore()
