@@ -457,10 +457,8 @@ class iMSCP_PHPini
 	 */
 	public function sendToEngine($domainId)
 	{
-		# TODO changing only the domain status is not sufficicent since
-		# we are providing many level for php.ini file
-		$query = "UPDATE `domain` SET `domain_status` = ? WHERE `domain_id` = ?";
-		exec_query($query, array('tochange', $domainId));
+		exec_query('UPDATE `domain` SET `domain_status` = ? WHERE `domain_id` = ?', array('tochange', $domainId));
+		exec_query('UPDATE `domain_aliasses` SET `alias_status` = ? WHERE `domain_id` = ?', array('tochange', $domainId));
 		send_request();
 	}
 
