@@ -937,6 +937,8 @@ function reseller_checkAndUpdateData($domainId, $recoveryMode = false)
 					exec_query($query, array('tochange', $domainId, 'ordered'));
 				}
 
+				// This is now done by the backend modules ( domain and alias modules )
+				/*
 				if($data['domain_subd_limit'] != '-1') {
 					$query = "UPDATE `subdomain` SET `subdomain_status` = ? WHERE `domain_id` = ?";
 					exec_query($query, array('tochange', $domainId));
@@ -951,13 +953,14 @@ function reseller_checkAndUpdateData($domainId, $recoveryMode = false)
 					";
 					exec_query($query, array('tochange', $domainId));
 				}
+				*/
 
 				$daemonRequest = true;
 			}
 
-			// Support for custom DNS records is now disabled - We must delete all custom DNS entries
-			// (except those that are protected), and update the DNS zone file
 			if ($data['domain_dns'] != $data['fallback_domain_dns'] && $data['domain_dns'] == 'no') {
+				// Support for custom DNS records is now disabled - We must delete all custom DNS entries
+				// (except those that are protected), and update the DNS zone file
 				$query = 'DELETE FROM `domain_dns` WHERE `domain_id` = ? AND `owned_by` = ?';
 				exec_query($query, array($domainId, 'custom_dns_feature'));
 
